--- a/.github/workflows/continue.yml
+++ b/.github/workflows/continue.yml
@@ -35,10 +35,10 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Test code
-        continue-on-error: true
         id: run-test
         run: npm run test
       - name: Upload test report
+        if: failure() && steps.run-test.outcome == 'failure'
         uses: actions/upload-artifact@v4
         with:
           name: test-report
